Fix top buttons and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -14,3 +14,15 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+.btn {
+  border-style: none;
+  text-decoration: none;
+  background-color: transparent;
+  color: #000;
+}
+
+.btn:hover {
+  background-color: #ddd;
+  color: #005e76;
+}
